<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TextView"
        style="@style/selectEVtextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/bottom_padding"
        android:text="@string/select_EV"
        android:textStyle="bold" />

    <ScrollView
        style="@style/selectEVtextview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin"
                android:layout_marginStart="@dimen/start_margin"

                android:layout_row="0"
                android:background="@drawable/image_border"
                android:contentDescription="@string/first_ev_imageB"
                android:padding="@dimen/all_padding"
                android:scaleType="centerInside"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin2"
                android:layout_marginStart="@dimen/start_margin2"
                android:layout_row="0"
                android:background="@drawable/image_border"
                android:contentDescription="@string/second_ev_imageB"
                android:padding="@dimen/all_padding"
                android:scaleType="centerInside"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin2"
                android:layout_marginStart="@dimen/start_margin2"
                android:layout_row="0"
                android:background="@drawable/image_border"
                android:contentDescription="@string/third_ev_imageB"
                android:padding="@dimen/all_padding"
                android:scaleType="centerInside"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin"

                android:layout_marginStart="@dimen/start_margin"
                android:layout_row="1"
                android:contentDescription="@string/first_ev_textV"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:textSize="@dimen/font_size"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin2"
                android:layout_marginStart="@dimen/start_margin2"
                android:layout_row="1"
                android:contentDescription="@string/second_ev_textV"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:textSize="@dimen/font_size"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin2"
                android:layout_marginStart="@dimen/start_margin2"
                android:layout_row="1"
                android:contentDescription="@string/third_ev_textV"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:textSize="@dimen/font_size"
                android:textStyle="bold"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_row="2"
                android:background="@drawable/image_border"
                android:contentDescription="@string/fourth_ev_imageB"
                android:padding="@dimen/all_padding"
                android:scaleType="centerInside"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin2"
                android:layout_marginStart="@dimen/start_margin2"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_row="2"
                android:background="@drawable/image_border"
                android:contentDescription="@string/fifth_ev_imageB"
                android:padding="@dimen/all_padding"
                android:scaleType="centerInside"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin2"
                android:layout_marginStart="@dimen/start_margin2"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_row="2"
                android:background="@drawable/image_border"
                android:contentDescription="@string/sixth_ev_imageB"
                android:padding="@dimen/all_padding"
                android:scaleType="centerInside"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_row="3"
                android:contentDescription="@string/fourth_ev_textV"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/top_padding"
                android:textSize="@dimen/font_size"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin2"
                android:layout_marginStart="@dimen/start_margin2"
                android:layout_row="3"
                android:contentDescription="@string/fifth_ev_textV"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/top_padding"
                android:textSize="@dimen/font_size"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin2"
                android:layout_marginStart="@dimen/start_margin2"
                android:layout_row="3"
                android:contentDescription="@string/sixth_ev_textV"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/top_padding"
                android:textSize="@dimen/font_size"
                android:textStyle="bold"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_row="4"
                android:background="@drawable/image_border"
                android:contentDescription="@string/seventh_ev_imageB"
                android:padding="@dimen/all_padding"
                android:scaleType="centerInside"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin2"
                android:layout_marginStart="@dimen/start_margin2"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_row="4"
                android:background="@drawable/image_border"
                android:contentDescription="@string/eighth_ev_imageB"
                android:padding="@dimen/all_padding"
                android:scaleType="centerInside"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin2"
                android:layout_marginStart="@dimen/start_margin2"
                android:layout_row="4"
                android:background="@drawable/image_border"
                android:contentDescription="@string/ninth_ev_imageB"
                android:padding="@dimen/all_padding"
                android:scaleType="centerInside"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_row="5"
                android:contentDescription="@string/seventh_ev_textV"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/top_padding"
                android:textSize="@dimen/font_size"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin2"
                android:layout_marginStart="@dimen/start_margin2"
                android:layout_row="5"
                android:contentDescription="@string/eighth_ev_textV"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/top_padding"
                android:textSize="@dimen/font_size"
                android:textStyle="bold"
                android:visibility="gone" />


            <TextView
                android:id="@+id/textView9"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin2"
                android:layout_marginStart="@dimen/start_margin2"
                android:layout_row="5"
                android:contentDescription="@string/ninth_ev_textV"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/top_padding"
                android:textSize="@dimen/font_size"
                android:textStyle="bold"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_row="6"
                android:background="@drawable/image_border"
                android:contentDescription="@string/tenth_ev_imageB"
                android:padding="@dimen/all_padding"
                android:scaleType="centerInside"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_marginLeft="@dimen/start_margin"
                android:layout_marginStart="@dimen/start_margin"
                android:layout_row="7"
                android:contentDescription="@string/tenth_ev_textV"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/top_padding"
                android:textSize="@dimen/font_size"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="3"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:visibility="visible">

                <Button
                    android:id="@+id/selectEVcontinueButton"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/image_border3"
                    android:text="@string/select_ev_continueButton"
                    android:textColor="@android:color/black"
                    android:visibility="visible" />
            </LinearLayout>


        </GridLayout>
    </ScrollView>

</LinearLayout>