<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserInfo">

    <EditText
        android:id="@+id/Daily_Commute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/Daily_Com_Hint"
        android:inputType="number"
        android:padding="6dp"/>

    <EditText
        android:id="@+id/Annual_Mil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Daily_Commute"
        android:layout_marginBottom="4dp"
        android:padding="6dp"
        android:hint="@string/An_Mil_Hint"
        android:inputType="number"/>


    <TextView
        android:id="@+id/Seating_Spin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/Annual_Mil"
        android:layout_toLeftOf="@id/Seating_Num"
        android:text="Seating" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/Seating_Num"
        android:layout_width="283dp"
        android:layout_height="43dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/Annual_Mil"
        android:layout_marginBottom="4dp"
        android:padding="6dp"
        android:spinnerMode="dropdown"
        android:entries="@array/Seating_Number"
        android:visibility="visible">

    </android.support.v7.widget.AppCompatSpinner>

    <EditText
        android:id="@+id/Monthly_Inc"
        android:layout_below="@id/Seating_Num"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginBottom="4dp"
        android:padding="6dp"
        android:hint="@string/Month_Inc_hint"
        />

    <EditText
        android:id="@+id/Down_Payment"
        android:layout_below="@id/Monthly_Inc"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/Down_Paym_Hint"
        android:padding="6dp" />


    <TextView
        android:id="@+id/Term_Numb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/Down_Payment"
        android:text="Terms" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/Terms"
        android:layout_width="274dp"
        android:layout_height="43dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/Down_Payment"
        android:layout_centerVertical="true"
        android:layout_marginBottom="4dp"
        android:padding="4dp"
        android:spinnerMode="dropdown"
        android:entries="@array/Terms_length"
        android:visibility="visible">

    </android.support.v7.widget.AppCompatSpinner>

    <TextView
        android:id="@+id/Charg_Avail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Terms"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:padding="4dp"
        android:text="Charging Availability" />

    <TextView
        android:id="@+id/public_Charg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Charg_Avail"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:padding="4dp"
        android:text="Public" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/public_Charg"
        android:layout_marginEnd="39dp"
        android:text="No"
        android:layout_alignParentRight="true"
        android:layout_marginRight="39dp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkBox"
        android:layout_below="@+id/public_Charg"
        android:layout_marginTop="-4dp"
        android:text="No"
        android:layout_alignLeft="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Terms"
        android:layout_below="@+id/public_Charg"
        android:layout_marginTop="-4dp"
        android:text="Yes"
        android:layout_alignLeft="@+id/Terms" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Terms"
        android:layout_alignTop="@+id/public_Charg"
        android:text="Yes"
        android:layout_alignLeft="@+id/Terms" />

    <TextView
        android:id="@+id/work_Charg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/public_Charg"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:padding="4dp"
        android:text="Work" />

    <TextView
        android:id="@+id/Home_Charg_Opt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/work_Charg"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_toLeftOf="@id/Home_Charg"
        android:lines="1"
        android:padding="4dp"
        android:text="Home" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/Home_Charg"
        android:layout_width="274dp"
        android:layout_height="43dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/work_Charg"
        android:layout_marginTop="4dp"
        android:padding="4dp"
        android:spinnerMode="dropdown"
        android:entries="@array/Home_Charg_Opt"
        android:visibility="visible">

    </android.support.v7.widget.AppCompatSpinner>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_below="@id/Home_Charg"
        android:padding="4dp"
        android:text="Continue" />

</RelativeLayout>